previous button added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="question-number"></div>
         <div id="question"></div>
         <ul id="options"></ul>
+        <button id="previousButton" onclick="loadPreviousQuestion()">Previous Question</button>
         <button id="nextButton" onclick="loadNextQuestion()">Next Question</button>
         <button id="shuffleQuestions" onclick="shuffleCurrentQuestions()">Shuffle Questions</button>
         <button id="shuffleChapters" onclick="shuffleChaptersAndQuestions()">Shuffle All</button>
