fix for shuffle

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <select id="chapter-select" onchange="changeChapter(this.value)">
             <!-- Chapter options will be dynamically inserted here -->
         </select>
+        <select id="question-select" onchange="changeQuestion(this.value)">
+            <!-- Question options will be dynamically inserted here -->
+        </select>
         <div id="chapter-name"></div>
         <div id="question-number"></div>
         <div id="question"></div>
