--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button id="nextButton" onclick="loadNextQuestion()">Next Question</button>
         <button id="shuffleQuestions" onclick="shuffleCurrentQuestions()">Shuffle Questions</button>
         <button id="shuffleChapters" onclick="shuffleChaptersAndQuestions()">Shuffle All</button>
+        <button id="autoNextToggle" onclick="toggleAutoNext()">Auto Next: On</button>
     </div>
         <p id="feedback"></p>
     </div>
