--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <div id="button-container"></div>
         <button id="previousButton" onclick="loadPreviousQuestion()">Previous Question</button>
         <button id="nextButton" onclick="loadNextQuestion()">Next Question</button>
+        <button id="shuffleToggle" onclick="toggleShuffleMode()">Shuffle off</button>
+        <button id="autoNextToggle" onclick="toggleAutoNext()">Auto Next: On</button>
         <button id="shuffleQuestions" onclick="shuffleCurrentQuestions()">Shuffle Questions</button>
         <button id="shuffleChapters" onclick="shuffleChaptersAndQuestions()">Shuffle All</button>
-        <button id="autoNextToggle" onclick="toggleAutoNext()">Auto Next: On</button>
+
     </div>
         <p id="feedback"></p>
     </div>
